[package]
name = "polarsc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap ={ version = "*", features = ["derive"]}
polars ={ version = "*", features = ["lazy"]}
criterion = "*"

# [[bench ]]
# name = "my_benchmark"
# harness = false
